Fix image editing for guide editing, show smaller image on small screen. Close #791.

--- a/app/assets/stylesheets/styles/components/guides/_guides.scss
+++ b/app/assets/stylesheets/styles/components/guides/_guides.scss
@@ -122,6 +122,7 @@
   .edit-link {
     float: right;
     margin-left: .9rem;
+    margin-bottom: .5rem;
   }
 
   .overview {
